// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Non exported symbol distribution: Export to "firstly encountered" module 1`] = `
"declare module \\"baz\\" {
    export function foo(): __private.ლinternalლლNonExported;
    export namespace __private {
        export class ლinternalლლNonExported {
        }
    }
    export {};
}
declare module \\"foo\\" {
    export function foo(): ___private.ლinternalლლNonExported;
    import { __private as ___private } from \\"baz\\";
    export {};
}
declare module \\"bar\\" {
    export function bar(): ___private.ლinternalლლNonExported;
    import { __private as ___private } from \\"baz\\";
    export {};
}
"
`;

exports[`Non exported symbol distribution: Export to bar 1`] = `
"declare module \\"baz\\" {
    export function foo(): ___private.ლinternalლლNonExported;
    import { __private as ___private } from \\"bar\\";
    export {};
}
declare module \\"foo\\" {
    export function foo(): ___private.ლinternalლლNonExported;
    import { __private as ___private } from \\"bar\\";
    export {};
}
declare module \\"bar\\" {
    export function bar(): __private.ლinternalლლNonExported;
    export namespace __private {
        export class ლinternalლლNonExported {
        }
    }
    export {};
}
"
`;

exports[`Non exported symbol distribution: Export to foo 1`] = `
"declare module \\"baz\\" {
    export function foo(): ___private.ლinternalლლNonExported;
    import { __private as ___private } from \\"foo\\";
    export {};
}
declare module \\"foo\\" {
    export function foo(): __private.ლinternalლლNonExported;
    export namespace __private {
        export class ლinternalლლNonExported {
        }
    }
    export {};
}
declare module \\"bar\\" {
    export function bar(): ___private.ლinternalლლNonExported;
    import { __private as ___private } from \\"foo\\";
    export {};
}
"
`;
